--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
+    "@primevue/forms": "^4.3.7",
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
+    "primevue": "^4.3.7",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-spinners": "^1.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
