--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "primevue": "^4.3.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "vue3-spinners": "^1.3.1"
+    "vue3-spinners": "^1.3.1",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
